[package]
name = "agent_based_trading_julia"
version = "0.1.0"
authors = ["cgmossa <cgmossa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
#debug = true


[dependencies]
rand = {version = "0.7.3", features = ["small_rng"]}
xorshift = "0.1"
rand_distr = "0.2.2"
libc = "0.2"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "cont_run"
harness = false
