[package]
name = "agent_based_trading_julia"
version = "0.1.0"
authors = ["cgmossa <cgmossa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
#debug = true


[dependencies]
rand = {version = "0.7", features = ["small_rng", "simd_support", "nightly", "std"]}
xorshift = "0.1"
rand_distr = "0.2.2"
libc = "0.2"
packed_simd = "*"
simd_prngs = { git = "https://github.com/ambiso/simd_prngs" }
rand_core = "0.5"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "cont_run"
harness = false
